--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "yarn-upgrade-all": "^0.7.2"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3"
   }
 }
